--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
   },
   "dependencies": {
     "core-js": "^3.4.4",
+    "firebase": "^7.6.2",
+    "moment": "^2.24.0",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
+    "vue-date-fns": "^1.1.0",
+    "vue-router": "^3.1.3",
+    "vue-textarea-autosize": "^1.1.1",
+    "vuetify": "^2.1.0"
   },
   "devDependencies": {
+    "@mdi/font": "^4.7.95",
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-eslint": "^4.1.0",
     "@vue/cli-plugin-router": "^4.1.0",
@@ -20,9 +26,13 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "material-design-icons-iconfont": "^5.0.1",
     "sass": "^1.23.7",
     "sass-loader": "^8.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-cli-plugin-moment": "^0.1.1",
+    "vue-cli-plugin-vuetify": "^2.0.3",
+    "vue-template-compiler": "^2.6.10",
+    "vuetify-loader": "^1.3.0"
   },
   "eslintConfig": {
     "root": true,
